# bot-detection-comparison

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  prompt.md  pyproject.toml
app/: layout.tsx  page.tsx
app/api/cloudflare/: route.ts
app/api/contact/: route.ts
app/api/contact2/: route.ts
app/api/recaptcha/: route.ts
app/components/: BotScoreDisplay.tsx  CloudflareBotProvider.tsx  ContactForm.tsx  ContactForm2.tsx  MouseCursorEffect.tsx  RecaptchaProvider.tsx  TurnstileProvider.tsx  TurnstileWidget.tsx
app/contact/: page.tsx
app/contact2/: page.tsx
app/lib/: recaptcha.ts
attack-scripts/: README.md  cloudflare_bot_test.py  html_page_test.py  html_page_test_results_20250827_170930.json  html_page_test_results_20250827_171131.json  simple_test.py  simple_test_results_20250827_165451.json  simple_test_results_20250827_165527.json  simple_test_results_20250827_165607.json  simple_test_results_20250827_165652.json  simple_test_results_20250827_165713.json  simple_test_results_20250827_165734.json  simple_test_results_20250827_170432.json  simple_test_results_20250827_170446.json  simple_test_results_20250827_170503.json
